# etcd3gw

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .zuul.yaml  HACKING.rst  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  usage.rst
etcd3gw/: __init__.py  client.py  exceptions.py  lease.py  lock.py  types.py  utils.py  watch.py
etcd3gw/examples/: etcd.py  watcher.py
etcd3gw/tests/: test_client.py  test_etcd3gw.py
releasenotes/notes/: api-version-discovery-2acf4ffb64f1faa7.yaml  bug-1967674-102b70275b1627cd.yaml  bug-2012261-d02f1a6f8fa65ea9.yaml  client-configurable-session-ae1b68a0e4bd894f.yaml  configurable-api-path-7652e756b6837e0b.yaml  deprecate-version-attribute-11a5aee8633147a4.yaml
releasenotes/source/: conf.py
